# jovie

./: AUTHORS  CMakeLists.txt  ChangeLog  KttsdConfigureChecks.cmake  Mainpage.dox  Makefile.am  Messages.sh  README  README.kttsd  TODO  TODO.french  clean_obsolete.sh  config-jovie.h.cmake  config-kttsd.h.cmake  configure.in.bot  configure.in.in  cvs2dist  kttsd.lsm  sample.polish  sample.ssml
app-plugins/kate/: CMakeLists.txt  Makefile.am  katekttsd.cpp  katekttsd.h  ktexteditor_kttsd.desktop  ktexteditor_kttsdui.rc
filters/: CMakeLists.txt  Doxyfile  Makefile  Makefile.am  jovie_filterplugin.desktop  kitty_filterplugin.desktop  kttsd_filterplugin.desktop  main.cpp  tagmappingrc  xhtml2ssml.cpp  xhtml2ssml.h  xhtml2ssml.kdevelop  xhtml2ssml.kdevelop.pcs  xhtml2ssml.kdevses  xhtml2ssml.pro  xmlelement.cpp  xmlelement.h
filters/sbd/: CMakeLists.txt  Makefile.am  kttsd_sbdplugin.desktop  polish_festival_sbdrc  sbdconf.cpp  sbdconf.h  sbdconfwidget.ui  sbdplugin.cpp  sbdproc.cpp  sbdproc.h  standard_sbdrc
filters/stringreplacer/: CMakeLists.txt  Makefile.am  abbreviations.xml  cdataescaper.cpp  cdataescaper.h  chat-de.xml  chat.xml  editreplacementwidget.ui  emoticons.xml  festival_unspeakable_chars.xml  jovie_stringreplacerplugin.desktop  kmail.xml  kttsd_stringreplacerplugin.desktop  polish_festival_fixes.xml  polish_festival_unspeakables.xml  qt2plaintext.xml  selectlanguagedlg.cpp  selectlanguagedlg.h  stringreplacerconf.cpp  stringreplacerconf.h  stringreplacerconfwidget.ui  stringreplacerplugin.cpp  stringreplacerproc.cpp  stringreplacerproc.h  testcdataescaper.cpp  testcdataescaper.h
filters/talkerchooser/: CMakeLists.txt  Makefile.am  female_notifications_rc  jovie_talkerchooserplugin.desktop  kttsd_talkerchooserplugin.desktop  selecttalkerdlg.cpp  selecttalkerdlg.h  talkerchooserconf.cpp  talkerchooserconf.h  talkerchooserconfwidget.ui  talkerchooserplugin.cpp  talkerchooserproc.cpp  talkerchooserproc.h
filters/xhtml2ssml/: Doxyfile  demonstration.html  main.cpp  xhtml2ssml.cpp  xhtml2ssml.h  xhtml2ssml.kdevelop  xhtml2ssml.kdevelop.pcs  xhtml2ssml.kdevses  xmlelement.cpp  xmlelement.h
filters/xmltransformer/: CMakeLists.txt  Makefile.am  jovie_xmltransformerplugin.desktop  kitty_xmltransformerplugin.desktop  kttsd_xmltransformerplugin.desktop  qt2plaintext.xsl  xhtml2ssml.xsl  xhtml2ssml_simple.xsl  xmltransformerconf.cpp  xmltransformerconf.h  xmltransformerconfwidget.ui  xmltransformerplugin.cpp  xmltransformerproc.cpp  xmltransformerproc.h
jovie/: CMakeLists.txt  SSMLtoPlainText.xsl  appdata.cpp  appdata.h  filtermgr.cpp  filtermgr.h  jovie.appdata.xml  jovie.cpp  jovie.desktop  jovie.h  jovieapp.desktop  jovietrayicon.cpp  jovietrayicon.h  kitty.cpp  kitty.desktop  kttsd.desktop  main.cpp  org.kde.jovie.appdata.xml  org.kde.jovie.desktop  speaker.cpp  speaker.h  speechjob.h  ssmlconvert.cpp  ssmlconvert.h  talkermgr.cpp  talkermgr.h
kcmkttsmgr/: CMakeLists.txt  Makefile.am  addtalker.cpp  addtalker.h  addtalkerwidget.ui  kcmkttsd.desktop  kcmkttsd_testmessage.desktop  kcmkttsmgr.cpp  kcmkttsmgr.h  kcmkttsmgrwidget.ui  kcmkttsmgrwidget.ui.h  kspeechinterface.cpp  kspeechinterface.h  kttsjobmgr.cpp  kttsjobmgr.h  kttsjobmgr.ui  kwidgetprobe.cpp  kwidgetprobe.h  selectevent.cpp  selectevent.h  selecteventwidget.ui  talkerwidget.cpp  talkerwidget.h  talkerwidget.ui
kspeak/: CMakeLists.txt  basic.txt  kspeak.cpp  kspeak.h  main.cpp
kttsd/: CMakeLists.txt  Makefile.am  README  SSMLtoPlainText.xsl  appdata.cpp  appdata.h  configdata.cpp  configdata.h  dcoptexttospeech.desktop  filtermgr.cpp  filtermgr.h  kitty.cpp  kitty.h  kittytrayicon.cpp  kittytrayicon.h  kspeech.cpp  kspeech.h  kspeechadaptor_p.cpp  kspeechadaptor_p.h  kttsd.cpp  kttsd.desktop  kttsd.h  main.cpp  speaker.cpp  speaker.h  speechdata.cpp  speechdata.h  speechjob.cpp  speechjob.h  ssmlconvert.cpp  ssmlconvert.h  talkermgr.cpp  talkermgr.h  threadedplugin.cpp  threadedplugin.h  utt.cpp  utt.h
kttsjobmgr/: CMakeLists.txt  Makefile.am  jobinfolistmodel.cpp  jobinfolistmodel.h  kttsjobmgr.cpp  kttsjobmgr.desktop  kttsjobmgr.h  kttsjobmgr.ui  kttsjobmgrui.rc  selecttalkerwidget.ui
kttsmgr/: CMakeLists.txt  Makefile.am  kttsmgr.cpp  kttsmgr.desktop  kttsmgr.h
libkttsd/: CMakeLists.txt  Makefile.am  filterconf.cpp  filterconf.h  filterproc.cpp  filterproc.h  kdeexportfix.h  kttsd_synthplugin.desktop  notify.cpp  notify.h  player.h  pluginconf.cpp  pluginconf.h  pluginproc.cpp  pluginproc.h  sbdfilterproc.cpp  sbdfilterproc.h  selectlanguagedlg.cpp  selectlanguagedlg.h  selecttalkerdlg.cpp  selecttalkerdlg.h  selecttalkerwidget.ui  stretcher.cpp  stretcher.h  talkercode.cpp  talkercode.h  talkerlistmodel.cpp  talkerlistmodel.h  testplayer.cpp  testplayer.h  utils.cpp  utils.h
players/: CMakeLists.txt  Makefile.am  kttsd_audioplugin.desktop
players/akodeplayer/: CMakeLists.txt  Makefile.am  README  akodeplayer.cpp  akodeplayer.h  akodeplugin.cpp  decoderpluginhandler.diff  kttsd_akodeplugin.desktop
players/alsaplayer/: CMakeLists.txt  Makefile.am  alsaplayer.cpp  alsaplayer.h  alsaplugin.cpp  formats.h  kttsd_alsaplugin.desktop
players/artsplayer/: CMakeLists.txt  Makefile.am  artsplayer.cpp  artsplayer.h  artsplugin.cpp  kttsd_artsplugin.desktop
players/gstplayer/: CMakeLists.txt  Makefile.am  gstplugin.cpp  gstreamerplayer.cpp  gstreamerplayer.h  kttsd_gstplugin.desktop
players/phononplayer/: CMakeLists.txt  kttsd_phononplugin.desktop  phononplayer.cpp  phononplayer.h  phononplugin.cpp
plugins/: CMakeLists.txt  Makefile.am
plugins/command/: CMakeLists.txt  Makefile.am  README  commandconf.cpp  commandconf.h  commandconfwidget.ui  commandplugin.cpp  commandproc.cpp  commandproc.h  configure.in.in  kttsd_commandplugin.desktop
plugins/epos/: CMakeLists.txt  Makefile.am  README  configure.in.bot  configure.in.in  eposconf.cpp  eposconf.h  eposconfwidget.ui  eposplugin.cpp  eposproc.cpp  eposproc.h  kttsd_eposplugin.desktop
plugins/festival/: Makefile.am  README  configure.in.in  est_string_config.h  festivalconf.cpp  festivalconf.h  festivalconfwidget.ui  festivalplugin.cpp  (+4 more)
(+109 files in other folders)
